United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7002129 Zero and Shark fixes, 3rd
7002129 : Zero and Shark fixes, 3rd

Details
Type:
Bug
Submit Date:
2010-11-23
Status:
Closed
Updated Date:
2011-04-23
Project Name:
JDK
Resolved Date:
2011-04-23
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
generic
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs20
Fixed Versions:
hs20

Related Reports
Backport:
Backport:
Relates:
Relates:

Sub Tasks

Description
http://mail.openjdk.java.net/pipermail/hotspot-compiler-dev/2010-November/004319.html

Hi all,

This webrev contains a couple of fixes for Zero and Shark:

 http://cr.openjdk.java.net/~gbenson/zero-shark-fixes-03/

Firstly, 6970683 introduced a new method, os::print_register_info,
which this webrev provides for Zero.  Secondly, 6953144 changed
the way that compilers are initialized in the compile broker, and
this webrev updates the Shark initialization for this change.

I don't have a bug id for this.

Cheers,
Gary

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/build/hotspot/rev/b675ff1ca7a3
                                     
2010-12-25
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/b675ff1ca7a3
                                     
2010-11-23



Hardware and Software, Engineered to Work Together