7002129: Zero and Shark fixes, 3rd

6970683 and 6953144 introduced changes that need to be implemented for Zero and Shark.

Reviewed-by: twisti